test/end-to-end/compile-errors/modifier-duplicate-or-redundant.crow
main void()
	()

f void() bare, bare, libc extern, d extern

nat64 builtin data

e extern mut

ee extern extern

en enum(x) data

f flags data

r record data

u union(x) data

uv union(x) by-val

dd extern data, data

mm record mut, mut

ss record shared, shared

rr record by-ref, by-ref

vv record by-val, by-val

g global(nat) libc extern, d extern

data spec builtin, builtin
